bad/assign_arr_elem_array_int.example_compiler_output
ERROR
[1mbad/assign_arr_elem_array_int.lat:4:20: [1;31merror: [0;1massigning to `int[]` from incompatible type `int`[m
	(new int[][3])[1] = 42;
	                  [1;32m^[m
